# Square-Root-UKF

./: CMakeLists.txt  README.md  STUDENT_T_SRUKF.md
MKL/: mkl_config_14900k.h  student_t_srukf.c  student_t_srukf.def  student_t_srukf.h
python/: bench_overhead.py
test/: bench_srukf.c  test_srukf.c
